# emo-in-action

./: .gitignore  README.md
firmware/: CMakeLists.txt  platformio.ini
firmware/main/: CMakeLists.txt
firmware/main/src/: config.cpp  config.h  constants.h  main.cpp
firmware/main/src/alarm/: alarm_ringtone.cpp  alarm_ringtone.h  alarm_system.cpp  alarm_system.h
firmware/main/src/bluetooth/: bt_manager.cpp  bt_manager.h  bt_speaker.cpp  bt_speaker.h  bt_voice_chat.cpp  bt_voice_chat.h
firmware/main/src/buttons/: button_handler.cpp  button_handler.h
firmware/main/src/cloud/: elevenlabs_api.cpp  elevenlabs_api.h  gemini_api.cpp  gemini_api.h  whisper_api.cpp  whisper_api.h
firmware/main/src/display/: lcd_display.cpp  lcd_display.h  oled_display.cpp  oled_display.h
firmware/main/src/ui/: animation.cpp  animation.h  companion.cpp  companion.h
firmware/main/src/utils/: sd_manager.cpp  sd_manager.h  wifi_manager.cpp  wifi_manager.h
